[package]
name = "mongo-data-dump"
version = "0.1.0"
authors = ["Ashish Kumar <ashishku@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
structopt = "0.3"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = "1.0"
chrono = "0.4"